--- a/css/index.css
+++ b/css/index.css
@@ -103,7 +103,7 @@ nav span{
     opacity: 80%;	
 }	
 .title-container hr{
-    width:80%;
+    width: 80%;
 }
 button{
     padding:1% 3%;
@@ -133,4 +133,47 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+
+@media (max-width: 500px) {
+
+    /* header */
+    header nav a {
+        font-size: 120%;
+        padding-left: 3%;
+        padding-right: 3%;
+    }
+    nav span {
+        border-left: 2px solid #626262; 
+    }
+
+    /* title container */
+    .title-container div {
+        width: 100%;
+    }
+    .title-container hr{
+        width: 100%;
+    }
+    .title-container h1 {
+        font-size: 300%;
+    }
+
+    /* artist paragraph */
+    .artists-container {
+        flex-flow: column wrap;
+        align-items: center;
+    }
+    .artist {
+        width: 100%;
+    }
+    .artist img {
+        width: 50%;
+        height: 50%;
+    }
+    .artist a {
+        font-size: 120%;
+    }
+    .bio {
+        font-size: 80%;
+    }
 }
