--- a/css/index.css
+++ b/css/index.css
@@ -19,12 +19,13 @@ font-size: 100%;
 font: inherit;  
 vertical-align: baseline;  
 }
+
 /*GENERAL STYLES*/
 html{
-    font-size:62.5%;
+    font-size: 62.5%;
 }
 body{
-    font-size:1.6rem;
+    font-size: 1.6rem;
     line-height: 1.5;
     font-family: 'Raleway', sans-serif;	
 }
@@ -34,13 +35,13 @@ h1, p, .name, .bio {
     margin: 4%;	
 }	
 h1{
-    font-size:6rem;
-    margin:0;
+    font-size: 6rem;
+    margin: 0;
 }
 a {	
     text-decoration: none;	
     color: black;
-    font-size:2.5rem;	
+    font-size: 2.5rem;	
 }	
 a:hover {	
     font-weight: bold;	
@@ -50,7 +51,7 @@ a:hover {
     font-weight: 200;	
 }	
 img {	
-    height:39rem;	
+    height: 39rem;	
     object-fit: cover;	
     display: block;	
     margin: 2%;	
@@ -65,25 +66,28 @@ img:hover {
 
 /*HEADER STYLES */
 header{
-    display:flex;
+    display: flex;
     justify-content: center;
 }
-nav{
-    width:30%;
-    display:flex;
-    justify-content:space-evenly;
-    margin-top:5%;
+nav {
+    width: 30%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 5%;
 }
 nav a{
     color:#626262;
 }
-nav span{
-    border-left:3px solid #626262;
 
+nav span {
+    border-left: 2px solid #626262;
+    height: 3vh;
 }
+
 /*Title Section Styles*/
 .title-container{
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -91,13 +95,13 @@ nav span{
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
     background-position: center;	
     color: white;	
-    width:80%;
-    display:flex;
+    width: 80%;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height:60vh;
-    margin:5% 0;
+    height: 60vh;
+    margin: 5% 0;
 }	
 .title-container div:hover {	
     opacity: 80%;	
@@ -106,10 +110,10 @@ nav span{
     width: 80%;
 }
 button{
-    padding:1% 3%;
+    padding: 1% 3%;
     font-size: 1.6rem;
     border-radius:6px;
-    border:2px solid #626262;
+    border: 2px solid #626262;
     box-shadow: 2px 2px 1px #626262;
     transition: 2s;
 }
@@ -134,17 +138,42 @@ button:hover{
 .artist img{
     width:100%;
 }
+@media (max-width: 1050px) {
+    header nav {
+        width: 40%;
+    }
+}
+
+@media (max-width: 850px) {
+    header nav {
+        width: 45%;
+    }
+    header nav a {
+        font-size: 1.8rem;
+    }
+    /* straigh line between home, about, contact */
+    nav span {
+        height: 2.5vh;
+    }
+    .title-container h1 {
+        font-size: 250%;
+    }
+}
 
 @media (max-width: 500px) {
 
     /* header */
     header nav a {
-        font-size: 120%;
-        padding-left: 3%;
-        padding-right: 3%;
+        font-size: 100%;
     }
+
+    nav {
+        align-items: center;
+    }
+    /* straigh line between home, about, contact */
     nav span {
         border-left: 2px solid #626262; 
+        height: 2.5vh;
     }
 
     /* title container */
@@ -155,7 +184,7 @@ button:hover{
         width: 100%;
     }
     .title-container h1 {
-        font-size: 300%;
+        font-size: 250%;
     }
 
     /* artist paragraph */
